# drf-waas

./: Makefile  manage.py  pyproject.toml  pytest.ini  readme.md
core/: models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_remove_organization_users_role.py  0003_billing.py  0004_alter_organization_brc_alter_organization_brn.py  0005_organization_core_organi_name_d0cc3b_idx.py
tests/core/: conftest.py  test_views.py
waas/: asgi.py  settings.py  urls.py  wsgi.py
